--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "watch": "concurrently 'tsc --watch' 'nodemon --watch \"dist\" dist/index.js'"
   },
   "repository": {
     "type": "git",
@@ -26,5 +27,14 @@
     "koa-mount": "^2.0.0",
     "koa-router": "7",
     "mongodb": "^2.2.24"
+  },
+  "devDependencies": {
+    "@types/graphql": "^0.8.6",
+    "@types/koa": "^2.0.38",
+    "@types/koa-router": "^7.0.21",
+    "@types/mongodb": "^2.1.41",
+    "nodemon": "^1.11.0",
+    "typescript": "^2.2.1",
+    "concurrently": "^3.4.0"
   }
 }
