--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "graphql": "^0.9.1",
     "graphql-date": "^1.0.3",
+    "graphql-tools": "^0.10.1",
     "koa": "^2.0.1",
     "koa-convert": "^1.2.0",
     "koa-graphql": "^0.6.2",
@@ -33,8 +34,8 @@
     "@types/koa": "^2.0.38",
     "@types/koa-router": "^7.0.21",
     "@types/mongodb": "^2.1.41",
+    "concurrently": "^3.4.0",
     "nodemon": "^1.11.0",
-    "typescript": "^2.2.1",
-    "concurrently": "^3.4.0"
+    "typescript": "^2.2.1"
   }
 }
