--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "graphql": "^0.9.1",
     "graphql-date": "^1.0.3",
+    "graphql-subscriptions": "^0.3.0",
     "graphql-tools": "^0.10.1",
     "koa": "^2.0.1",
     "koa-convert": "^1.2.0",
