--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "watch": "concurrently 'tsc --watch' 'nodemon --watch \"dist\" --watch \"schemas\" --ext js,ts,gql dist/index.js'"
+    "watch": "concurrently 'tsc --watch' 'nodemon --watch \"dist\" --watch \"schemas\" --ext js,ts,gql dist/index.js'",
+    "lint": "tslint 'src/**/*.ts'"
   },
   "repository": {
     "type": "git",
@@ -37,6 +38,7 @@
     "@types/mongodb": "^2.1.41",
     "concurrently": "^3.4.0",
     "nodemon": "^1.11.0",
+    "tslint": "^4.5.1",
     "typescript": "^2.2.1"
   }
 }
