--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "node": ">=7.6.0"
   },
   "dependencies": {
+    "fresh-id": "^1.1.0",
     "graphql": "^0.9.1",
     "graphql-date": "^1.0.3",
     "graphql-subscriptions": "^0.3.0",
