--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "koa-mount": "^2.0.0",
     "koa-router": "7",
     "lodash.get": "^4.4.2",
+    "moment": "^2.17.1",
     "mongodb": "^2.2.24"
   },
   "devDependencies": {
