--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "koa-router": "7",
     "lodash.get": "^4.4.2",
     "moment": "^2.17.1",
-    "mongodb": "^2.2.24"
+    "mongodb": "^2.2.24",
+    "typescript": "^2.2.1"
   },
   "devDependencies": {
     "@types/graphql": "^0.8.6",
@@ -44,7 +45,6 @@
     "@types/mongodb": "^2.1.41",
     "concurrently": "^3.4.0",
     "nodemon": "^1.11.0",
-    "tslint": "^4.5.1",
-    "typescript": "^2.2.1"
+    "tslint": "^4.5.1"
   }
 }
