--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,4 +1,5 @@
 # This should bring up a docker container with a volume mapped to dist folder
+# then the command should ensure the dist folder is kept up to date on changes maybe nodemon
 version: '3'
 services:
   api:
@@ -6,7 +7,6 @@ services:
     volumes:
       - yarn:/root/.cache/yarn
       - ./:/usr/src/app
-    restart: always
     working_dir: /usr/src/app
     ports:
       - "5000:3080"
