--- a/.dockerignore
+++ b/.dockerignore
@@ -1,5 +1,10 @@
+.dockerignore
+.git
+.gitignore
 node_modules
 test
-docker-compose.yml
+docker-compose.dev.yml
+docker-compose.prod.yml
 Dockerfile
 README.md
+TODO.md
