--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -9,8 +9,11 @@ services:
       - ./:/usr/src/app
     working_dir: /usr/src/app
     ports:
-      - "5000:3080"
+      - "3080:3080"
     command: yarn build && yarn watch
+    environment:
+      - MONGODB_URL=mongodb://paperKingDevelopingByiHealth:d3Wrg40dE@120.131.8.26:27017/paper-king-developing
+      - SECRET=8B8kMWAunyMhxM9q9OhMVCJiXpxBIqpo
 
 volumes:
   yarn:
