--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -5,5 +5,8 @@ services:
     build: .
     working_dir: /usr/src/app
     ports:
-      - "5000:3080"
+      - "3080:3080"
     restart: always
+    environment:
+      - MONGODB_URL=mongodb://paperKingByiHealth:djsdF3fQa@120.131.8.26:27017,120.131.8.27:27017,120.131.8.46:27017/paper-king?replicaSet=iHealthMongo
+      - SECRET=8B8kMWAunyMhxM9q9OhMVCJiXpxBIqpo
