--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "date-aware-json": "^0.1.0",
+    "fresh-id": "^1.1.0",
     "graphql": "^0.9.1",
     "graphql-subscriptions": "^0.3.0",
     "graphql-tools": "^0.10.1",
