--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "koa-mount": "^2.0.0",
     "koa-router": "7",
     "ks3": "^0.4.2",
-    "lodash.get": "^4.4.2",
+    "lodash": "^4.17.4",
+    "mathjs": "^3.13.1",
     "moment": "^2.17.1",
     "mongodb": "^2.2.24",
     "typescript": "^2.2.1"
@@ -47,7 +48,6 @@
     "@types/koa": "^2.0.39",
     "@types/koa-router": "^7.0.21",
     "@types/lodash": "^4.14.55",
-    "@types/lodash.get": "^4.4.1",
     "@types/mongodb": "^2.1.41",
     "concurrently": "^3.4.0",
     "husky": "^0.13.2",
