--- a/package.json
+++ b/package.json
@@ -39,8 +39,7 @@
     "lodash": "^4.17.4",
     "mathjs": "^3.13.1",
     "moment": "^2.17.1",
-    "mongodb": "^2.2.24",
-    "typescript": "^2.2.1"
+    "mongodb": "^2.2.24"
   },
   "devDependencies": {
     "@types/graphql": "^0.8.6",
@@ -52,6 +51,7 @@
     "concurrently": "^3.4.0",
     "husky": "^0.13.2",
     "nodemon": "^1.11.0",
-    "tslint": "^4.5.1"
+    "tslint": "^5.4.3",
+    "typescript": "^2.3.4"
   }
 }
