--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "koa-convert": "^1.2.0",
     "koa-cors": "^0.0.16",
     "koa-graphql": "^0.6.2",
+    "koa-logger": "^3.0.1",
     "koa-mount": "^2.0.0",
     "koa-router": "7",
     "ks3": "^0.4.2",
