--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "lodash": "^4.17.4",
     "mathjs": "^3.13.1",
     "moment": "^2.17.1",
-    "mongodb": "^2.2.24"
+    "mongodb": "^2.2.24",
+    "mongodb-auto-reconnect": "^0.0.1"
   },
   "devDependencies": {
     "@types/graphql": "^0.8.6",
