--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "graphql-subscriptions": "^0.3.0",
     "graphql-tools": "^0.10.1",
     "koa": "^2.2.0",
+    "koa-bodyparser": "^4.2.0",
     "koa-convert": "^1.2.0",
     "koa-cors": "^0.0.16",
     "koa-graphql": "^0.6.2",
