--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,13 @@
 {
-  "include": [
-    "src/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules",
-    "**/*.spec.ts"
-  ],
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules", "**/*.spec.ts"],
   "compilerOptions": {
     "target": "es3",
     "noImplicitAny": false,
     "strictNullChecks": true,
     "outDir": "dist",
     "moduleResolution": "node",
-    "lib": [
-      "es2015"
-    ]
+    "allowJs": true,
+    "lib": ["es2015"]
   }
 }
