Update from master

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "strictNullChecks": true,
     "outDir": "dist",
     "moduleResolution": "node",
+    "allowJs": true,
     "lib": [
       "es2017"
     ]
