--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "graphql-subscriptions": "^0.3.0",
     "graphql-tools": "^0.10.1",
     "koa": "^2.2.0",
+    "koa-bodyparser": "^4.2.0",
     "koa-convert": "^1.2.0",
     "koa-cors": "^0.0.16",
     "koa-graphql": "^0.6.2",
@@ -47,6 +48,7 @@
     "@types/graphql": "^0.8.6",
     "@types/graphql-date": "^1.0.0",
     "@types/koa": "^2.0.39",
+    "@types/koa-bodyparser": "^3.0.24",
     "@types/koa-router": "^7.0.21",
     "@types/lodash": "^4.14.55",
     "@types/mongodb": "^2.1.41",
