--- a/package.json
+++ b/package.json
@@ -42,10 +42,11 @@
     "mathjs": "^3.13.1",
     "moment": "^2.17.1",
     "mongodb": "^2.2.24",
-    "mongodb-auto-reconnect": "^0.0.1"
+    "mongodb-auto-reconnect": "^0.0.1",
+    "subscriptions-transport-ws": "^0.9.0"
   },
   "devDependencies": {
-    "@types/graphql": "^0.8.6",
+    "@types/graphql": "^0.11.4",
     "@types/graphql-date": "^1.0.0",
     "@types/koa": "^2.0.39",
     "@types/koa-bodyparser": "^3.0.24",
