--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "lint": "tslint 'src/**/*.ts'",
     "docker:dev": "docker-compose -f docker-compose.dev.yml up",
     "docker:prod": "docker-compose -f docker-compose.prod.yml up -d",
-    "archive": "tar czf pigeon.tar.gz dist/ node_modules/ schemas/",
-    "prepush": "npm run lint"
+    "archive": "tar czf pigeon.tar.gz dist/ node_modules/ schemas/"
   },
   "repository": {
     "type": "git",
