wechat signUp or login

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -19,6 +19,8 @@ services:
       - RIGHTEOUS_RAVEN_URL=https://raven.internal.ihealthcn.com
       - RIGHTEOUS_RAVEN_ID=hwX6aOr1
       - RIGHTEOUS_RAVEN_KEY=af3da1c0-5cd9-11e7-8401-fb7c0283f83d
+      - APP_ID=wx915efa8b538a4df4
+      - APP_SECRET=d7be675b1fa83094a446087a90cf4f76
 
 volumes:
   yarn:
