fixed type issue and docker start issue

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -10,7 +10,7 @@ services:
     working_dir: /usr/src/app
     ports:
       - "3080:3080"
-    command: yarn build && yarn watch
+    command: yarn watch
     environment:
       - MONGO_URL=mongodb://paperKingDevelopingByiHealth:d3Wrg40dE@mongodev.ihealthcn.com:27017,mongodev.ihealthcn.com:27018,mongodev.ihealthcn.com:27019,mongodev1.ihealthcn.com:27017,mongodev2.ihealthcn.com:27018,mongodev3.ihealthcn.com:27019/paper-king-developing?replicaSet=rs
       - SECRET=8B8kMWAunyMhxM9q9OhMVCJiXpxBIqpo
