Change the drone to update this branch to test

--- a/.drone.yml
+++ b/.drone.yml
@@ -15,7 +15,7 @@ pipeline:
       - latest
     dockerfile: Dockerfile
     when:
-      branch: develop
+      branch: remender_module
       event: push
   build_step:
     image: plugins/docker
