--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "npm run docker:dev",
     "build": "tsc",
-    "watch": "concurrently 'tsc --watch' 'nodemon --watch \"dist\" --watch \"schemas\" --ext js,ts,gql dist/index.js'",
+    "watch":
+      "concurrently 'tsc --watch' 'nodemon --watch \"dist\" --watch \"schemas\" --ext js,ts,gql dist/index.js'",
     "lint": "tslint 'src/**/*.ts'",
     "docker:dev": "docker-compose -f docker-compose.dev.yml up",
     "docker:prod": "docker-compose -f docker-compose.prod.yml up -d",
@@ -24,8 +25,8 @@
     "node": ">=8.1.4"
   },
   "dependencies": {
+    "apollo-server-koa": "1.3.6",
     "co-wechat-oauth": "^2.0.1",
-    "date-aware-json": "^0.1.0",
     "fresh-id": "^1.1.0",
     "graphql": "^0.11.7",
     "graphql-subscriptions": "^0.5.6",
@@ -34,7 +35,6 @@
     "koa-bodyparser": "^4.2.0",
     "koa-convert": "^1.2.0",
     "koa-cors": "^0.0.16",
-    "koa-graphql": "^0.7.3",
     "koa-morgan": "^1.0.1",
     "koa-mount": "^2.0.0",
     "koa-router": "7",
