added non docker dev script and default values

--- a/package.json
+++ b/package.json
@@ -6,11 +6,17 @@
   "scripts": {
     "start": "npm run docker:dev",
     "build": "tsc",
-    "watch": "concurrently 'tsc --watch' 'nodemon --watch \"dist\" --watch \"schemas\" --ext js,ts,gql dist/index.js'",
+    "watch":
+      "concurrently 'tsc --watch' 'nodemon --watch \"dist\" --watch \"schemas\" --ext js,ts,gql dist/index.js'",
     "lint": "tslint 'src/**/*.ts'",
+    "dev": "export $npm_package_config_mongo_url && npm run watch",
     "docker:dev": "docker-compose -f docker-compose.dev.yml up",
     "docker:prod": "docker-compose -f docker-compose.prod.yml up -d",
     "archive": "tar czf pigeon.tar.gz dist/ node_modules/ schemas/"
+  },
+  "config": {
+    "mongo_url":
+      "MONGO_URL=mongodb://paperKingDevelopingByiHealth:d3Wrg40dE@mongodev.ihealthcn.com:27017,mongodev.ihealthcn.com:27018,mongodev.ihealthcn.com:27019,mongodev1.ihealthcn.com:27017,mongodev2.ihealthcn.com:27018,mongodev3.ihealthcn.com:27019/paper-king-developing?replicaSet=rs"
   },
   "repository": {
     "type": "git",
