Added redis cron job

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -10,6 +10,8 @@ services:
     working_dir: /usr/src/app
     ports:
       - "3080:3080"
+    links:
+      - redis
     command: yarn watch
     environment:
       - MONGO_URL=mongodb://paperKingDevelopingByiHealth:d3Wrg40dE@mongodev.ihealthcn.com:27017,mongodev.ihealthcn.com:27018,mongodev.ihealthcn.com:27019,mongodev1.ihealthcn.com:27017,mongodev2.ihealthcn.com:27018,mongodev3.ihealthcn.com:27019/paper-king-developing?replicaSet=rs
@@ -21,6 +23,11 @@ services:
       - RIGHTEOUS_RAVEN_KEY=af3da1c0-5cd9-11e7-8401-fb7c0283f83d
       - APP_ID=wx915efa8b538a4df4
       - APP_SECRET=d7be675b1fa83094a446087a90cf4f76
+  redis:
+    build:
+      context: .
+      dockerfile: Dockerfile-redis
+
 
 volumes:
   yarn:
