--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "start": "npm run docker:dev",
     "build": "tsc",
-    "watch":
-      "concurrently 'tsc --watch' 'nodemon --watch \"dist\" --watch \"schemas\" --ext js,ts,gql dist/index.js'",
+    "watch": "concurrently 'tsc --watch' 'nodemon --watch \"dist\" --watch \"schemas\" --ext js,ts,gql dist/index.js'",
     "lint": "tslint 'src/**/*.ts'",
     "dev": "export $npm_package_config_mongo_url && npm run watch",
     "docker:dev": "docker-compose -f docker-compose.dev.yml up",
@@ -15,8 +14,7 @@
     "archive": "tar czf pigeon.tar.gz dist/ node_modules/ schemas/"
   },
   "config": {
-    "mongo_url":
-      "MONGO_URL=mongodb://paperKingDevelopingByiHealth:d3Wrg40dE@mongodev.ihealthcn.com:27017,mongodev.ihealthcn.com:27018,mongodev.ihealthcn.com:27019,mongodev1.ihealthcn.com:27017,mongodev2.ihealthcn.com:27018,mongodev3.ihealthcn.com:27019/paper-king-developing?replicaSet=rs"
+    "mongo_url": "MONGO_URL=mongodb://paperKingDevelopingByiHealth:d3Wrg40dE@mongodev.ihealthcn.com:27017,mongodev.ihealthcn.com:27018,mongodev.ihealthcn.com:27019,mongodev1.ihealthcn.com:27017,mongodev2.ihealthcn.com:27018,mongodev3.ihealthcn.com:27019/paper-king-developing?replicaSet=rs"
   },
   "repository": {
     "type": "git",
@@ -49,6 +47,7 @@
     "moment": "^2.17.1",
     "mongodb": "^2.2.24",
     "mongodb-auto-reconnect": "^0.0.1",
+    "redis": "^2.8.0",
     "request": "^2.34",
     "request-promise": "^4.2.2",
     "righteous-raven": "^1.0.5",
