Added 2 hous after bg measure message push

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -3,7 +3,9 @@
 version: '3'
 services:
   api:
-    image: node:8.9.4-alpine
+    build:
+      context: .
+      dockerfile: Dockerfile
     volumes:
       - yarn:/root/.cache/yarn
       - ./:/usr/src/app
