--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "node": ">=8.1.4"
   },
   "dependencies": {
+    "@types/jsonwebtoken": "^7.2.7",
     "apollo-server-koa": "1.3.6",
     "co-wechat-oauth": "^2.0.1",
     "fresh-id": "^1.1.0",
     "graphql": "^0.11.7",
     "graphql-subscriptions": "^0.5.6",
     "graphql-tools": "^2.18.0",
+    "jsonwebtoken": "^8.3.0",
     "koa": "^2.2.0",
     "koa-bodyparser": "^4.2.0",
     "koa-convert": "^1.2.0",
