--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "node": ">=8.1.4"
   },
   "dependencies": {
+    "alipay-mobile": "^2.2.5",
     "apollo-server-koa": "1.3.6",
     "co-wechat-oauth": "^2.0.1",
     "crypto": "^1.0.1",
