--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "crypto": "^1.0.1",
     "fresh-id": "^1.1.0",
     "graphql": "^0.11.7",
+    "graphql-request": "^1.8.0",
     "graphql-subscriptions": "^0.5.6",
     "graphql-tools": "^2.18.0",
     "jsonwebtoken": "^8.3.0",
