Added authorization for restful api

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -18,6 +18,7 @@ services:
     environment:
       - MONGO_URL=mongodb://paperKingDevelopingByiHealth:d3Wrg40dE@mongodev.ihealthcn.com:27017,mongodev.ihealthcn.com:27018,mongodev.ihealthcn.com:27019,mongodev1.ihealthcn.com:27017,mongodev2.ihealthcn.com:27018,mongodev3.ihealthcn.com:27019/paper-king-developing?replicaSet=rs
       - SECRET=8B8kMWAunyMhxM9q9OhMVCJiXpxBIqpo
+      - JWT_SECRET=tctocFi4FLDZtLcbwmxgRJmUj3RHCWwK
       - PORT=3080
       - NODE_ENV=development
       - RIGHTEOUS_RAVEN_URL=https://raven.ihealthlabs.com.cn
