--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "alipay-mobile": "^2.2.5",
     "apollo-server-koa": "1.3.6",
+    "bcryptjs": "^2.4.3",
     "co-wechat-oauth": "^2.0.1",
     "crypto": "^1.0.1",
     "fresh-id": "^1.1.0",
@@ -42,6 +43,7 @@
     "koa-bodyparser": "^4.2.0",
     "koa-convert": "^1.2.0",
     "koa-cors": "^0.0.16",
+    "koa-jwt": "^3.3.2",
     "koa-morgan": "^1.0.1",
     "koa-mount": "^2.0.0",
     "koa-router": "7",
