--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "alipay-mobile": "^2.2.5",
+    "apollo-server": "^2.0.0",
     "apollo-server-koa": "1.3.6",
     "bcryptjs": "^2.4.3",
     "co-wechat-oauth": "^2.0.1",
