add tianjin AI interface implement

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -11,7 +11,7 @@ services:
       - ./:/usr/src/app
     working_dir: /usr/src/app
     ports:
-      - "3080:3080"
+      - '3080:3080'
     links:
       - redis
     command: yarn watchAndRun
@@ -27,10 +27,11 @@ services:
       - RIGHTEOUS_RAVEN_KEY=af3da1c0-5cd9-11e7-8401-fb7c0283f83d
       - APP_ID=wx915efa8b538a4df4
       - APP_SECRET=d7be675b1fa83094a446087a90cf4f76
+      - AI_HOST=http://172.31.48.26:7011
   redis:
     build:
       context: .
       dockerfile: Dockerfile-redis
 
 volumes:
-  yarn:
+  ? yarn
