--- a/.drone.yml
+++ b/.drone.yml
@@ -58,32 +58,32 @@ pipeline:
     when:
       status:
         - failure
-  rancher:
-    image: peloton/drone-rancher
-    url: 'http://rancher.ihealthcn.com/v2-beta/projects/1a46'
-    access_key: FC6450BBAC9464CD0069
-    secret_key: 2mbbTGC2rHFV4kghdYfZwDfjmbsR94KwKDhcaWZ5
-    service: gtzh-stg/pigeon
-    docker_image: 'registry.cn-beijing.aliyuncs.com/ihealthlabs/pigeon:latest'
-    batch_size: 1
-    timeout: 600
-    confirm: true
-    when:
-      branch: develop
-      event: push
-  report-deploy:
-    image: clem109/drone-wechat
-    secrets:
-      - plugin_corp_secret
-      - plugin_corpid
-      - plugin_agent_id
-    title: '${DRONE_REPO_NAME}'
-    description: |
-      构建序列: ${DRONE_BUILD_NUMBER} 部署成功！
-      更新内容: ${DRONE_COMMIT_MESSAGE}
-    msg_url: 'http://120.92.88.112:7001/'
-    btn_txt: 查看运行状况
-    when:
-      branch: develop
-      status:
-        - success
+  # rancher:
+  #   image: peloton/drone-rancher
+  #   url: 'http://rancher.ihealthcn.com/v2-beta/projects/1a46'
+  #   access_key: FC6450BBAC9464CD0069
+  #   secret_key: 2mbbTGC2rHFV4kghdYfZwDfjmbsR94KwKDhcaWZ5
+  #   service: gtzh-stg/pigeon
+  #   docker_image: 'registry.cn-beijing.aliyuncs.com/ihealthlabs/pigeon:latest'
+  #   batch_size: 1
+  #   timeout: 600
+  #   confirm: true
+  #   when:
+  #     branch: develop
+  #     event: push
+  # report-deploy:
+  #   image: clem109/drone-wechat
+  #   secrets:
+  #     - plugin_corp_secret
+  #     - plugin_corpid
+  #     - plugin_agent_id
+  #   title: '${DRONE_REPO_NAME}'
+  #   description: |
+  #     构建序列: ${DRONE_BUILD_NUMBER} 部署成功！
+  #     更新内容: ${DRONE_COMMIT_MESSAGE}
+  #   msg_url: 'http://120.92.88.112:7001/'
+  #   btn_txt: 查看运行状况
+  #   when:
+  #     branch: develop
+  #     status:
+  #       - success
