--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "bcryptjs": "^2.4.3",
     "co-wechat-oauth": "^2.0.1",
     "crypto": "^1.0.1",
+    "dayjs": "^1.7.5",
     "fresh-id": "^1.1.0",
     "graphql": "^0.11.7",
     "graphql-request": "^1.8.0",
