--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "alipay-mobile": "^2.2.6",
     "apollo-server": "^2.1.0",
     "apollo-server-koa": "1.4.0",
+    "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
     "co-wechat-oauth": "^2.0.1",
     "crypto": "^1.0.1",
