--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -21,7 +21,7 @@ services:
       - MONGO_RAVEN_URL=mongodb://sa:Nu29Yips@mongoprod1.ihealthcn.com:27017,mongoprod2.ihealthcn.com:27017,mongoprod3.ihealthcn.com:27017/righteous-raven?replicaSet=iHealthMongo&authSource=admin
       - SECRET=8B8kMWAunyMhxM9q9OhMVCJiXpxBIqpo
       - JWT_SECRET=tctocFi4FLDZtLcbwmxgRJmUj3RHCWwK
-      - AUTH=FALSE
+      - AUTH=TRUE
       - PORT=3080
       - NODE_ENV=development
       - RIGHTEOUS_RAVEN_URL=https://raven.ihealthlabs.com.cn
@@ -37,6 +37,7 @@ services:
       - LEADER_MOBILE2=15620536989
       - TOKEN_EXP=10m
       - TOKEN_EXP_FOR_NEW=2m
+      - TOKEN_EXP_FOR_API=1m
   redis:
     build:
       context: .
