--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "babel:build": "babel src --out-dir dist --copy-files",
     "babel:watch": "babel --watch src --out-dir dist --copy-files",
     "watchAndRun": "rm -rf ./dist && npm run babel:build && concurrently 'npm run babel:watch' 'nodemon --watch \"dist\" --watch \"schemas\" --ext js,graphql dist/index.js'",
+    "docker:local": "docker-compose -f docker-compose.local.yml up",
     "docker:dev": "docker-compose -f docker-compose.dev.yml up",
     "docker:prod": "docker-compose -f docker-compose.prod.yml up -d",
     "archive": "tar czf pigeon.tar.gz dist/ node_modules/ schemas/",
