--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "moment": "^2.22.2",
     "mongodb": "^3.1.6",
     "mongodb-auto-reconnect": "^0.0.1",
+    "node-pre-gyp": "^0.12.0",
     "pinyin4js": "^1.3.6",
     "randomcolor": "^0.5.3",
     "redis": "^2.8.0",
